--- a/src/compoents/Footer.module.css
+++ b/src/compoents/Footer.module.css
@@ -2,7 +2,14 @@
   display: grid;
   grid-template-columns: auto auto auto;
   place-content: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   height: 10vh;
   background-color: var(--card-bg);
+}
+
+
+@media (max-width: 480px) {
+  .footerContainer p {
+   text-align: center;
+  }
 }
