--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -29,7 +29,7 @@ color: white;
 text-decoration:underline;
 }
 
-.logoImg:first-of-type {
+.logoImg{
   grid-column: 1;
   grid-row: 2;
   width: 100%;
@@ -71,15 +71,25 @@ text-decoration:underline;
   
   .logoText {
     grid-column: 1;
-    grid-row: 3;
+    max-width: 390px;
+    justify-self: center;
+    text-align: center;
+    padding: 0;
   }
   
-  .logoImg:last-of-type {
+  .logoImg {
+    justify-self: center;
+    max-width: 390px;
     grid-column: 1;
     grid-row: 4;
   }
   
   .mockupSection {
     grid-row: 5;
+    justify-self: center;
+    max-width: 390px;
   }
+  .mockup{
+  max-width: 390px;
+}
 }
